--- a/less/home-page.less
+++ b/less/home-page.less
@@ -6,7 +6,7 @@ header {
     background-position: center;
 
     img {
-        padding: 6% 0 1% 10%;
+        padding: 6% 10% 1% 10%;
         
         object-fit: cover;
         object-position: center;
